refactor: Change to Java8