@@ -6,6 +6,7 @@ import java.io.IOException;
 import java.io.RandomAccessFile;
 import java.nio.file.Files;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class TemplateFileReader {
@@ -15,10 +16,10 @@ public class TemplateFileReader {
         if (!templateFile.exists()) throw new FileNotFoundException(templateFile.getName() + " 文件不存在");
         List<String> templates;
         try {
-            String str = Files.readString(templateFile.toPath());
+            String str = new String(Files.readAllBytes(templateFile.toPath()));
             str = str.replaceAll("\r?\n{2}", REPLACEMENT);
             str = str.replaceAll("[\r\n]", "");
-            templates = new ArrayList<>(List.of(str.split(REPLACEMENT)));
+            templates = new ArrayList<>(Arrays.asList(str.split(REPLACEMENT)));
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
