@@ -6,6 +6,7 @@ import org.morlinnn.reader.TemplateReader;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 public class TemplateElementBuilder {
     private final TemplateElement element;
@@ -17,7 +18,7 @@ public class TemplateElementBuilder {
 
     public void addEntry(Map.Entry<String, String> entry) {
         switch (entry.getKey()) {
-            case "id" -> {
+            case "id": {
                 try {
                     String value = TemplateReader.removeUselessSpace(entry.getValue());
                     if (value != null) {
@@ -26,25 +27,37 @@ public class TemplateElementBuilder {
                 } catch (NumberFormatException e) {
                     throw new IllegalArgumentException("id 应为 Integer 类型, 而不是 " + entry.getValue());
                 }
+                break;
             }
-            case "type" -> {
+            case "type": {
                 try {
                     element.setType(DataType.valueOf(TemplateReader.removeUselessSpace(entry.getValue())));
                 } catch (IllegalArgumentException e) {
                     throw new IllegalArgumentException("type 的书写错误 " + entry.getValue());
                 }
+                break;
             }
-            case "elements" -> element.setElements(readElements(TemplateReader.removeUselessSpace(entry.getValue())));
-            case "limit" -> {
+            case "elements": {
+                element.setElements(readElements(TemplateReader.removeUselessSpace(entry.getValue())));
+                break;
+            }
+            case "limit": {
                 try {
                     element.setLimit(readLimit(TemplateReader.removeUselessSpace(entry.getValue())));
                 } catch (NumberFormatException e) {
                     throw new IllegalArgumentException("limit 应为 Integer 类型, 而不是 " + entry.getValue());
                 }
+                break;
             }
-            case "exclusive" -> setExclusive(TemplateReader.removeUselessSpace(entry.getValue()));
-            case "default" -> element.setDefaultValue(TemplateReader.removeUselessSpace(entry.getValue()));
-            case "selection" -> {
+            case "exclusive": {
+                setExclusive(TemplateReader.removeUselessSpace(entry.getValue()));
+                break;
+            }
+            case "default": {
+                element.setDefaultValue(TemplateReader.removeUselessSpace(entry.getValue()));
+                break;
+            }
+            case "selection": {
                 if (!(element instanceof SelectTemplateElement))
                     throw new IllegalArgumentException("非 Select 模板写入了 selection");
                 String[] dividedSelect = TemplateReader.divide(entry.getValue());
@@ -69,7 +82,7 @@ public class TemplateElementBuilder {
                     throw new IllegalArgumentException("selection 书写错误 " + dividedSelect[1]);
                 }
             }
-            default -> System.out.println("未匹配的键值对: " + entry);
+            default: System.out.println("未匹配的键值对: " + entry);
         }
     }
 
@@ -97,7 +110,7 @@ public class TemplateElementBuilder {
     }
 
     private List<Integer> readLimit(String str) {
-        List<Integer> res = TemplateReader.divideFiled(str, ',').stream().map(Integer::parseInt).toList();
+        List<Integer> res = TemplateReader.divideFiled(str, ',').stream().map(Integer::parseInt).collect(Collectors.toList());
         if (res.size() > 2) throw new IllegalArgumentException("limit 应最多包含 2 个元素, 而不是 " + str);
         return res;
     }
@@ -105,34 +118,34 @@ public class TemplateElementBuilder {
     private List<?> readSelection(String str, DataType type) {
         List<String> selectionStrings = TemplateReader.divideFiled(str, ',');
         switch (type) {
-            case String -> {
+            case String: {
                 return selectionStrings;
             }
-            case Int -> {
-                return selectionStrings.stream().map(Integer::parseInt).toList();
+            case Int: {
+                return selectionStrings.stream().map(Integer::parseInt).collect(Collectors.toList());
             }
-            case Short -> {
-                return selectionStrings.stream().map(Short::parseShort).toList();
+            case Short: {
+                return selectionStrings.stream().map(Short::parseShort).collect(Collectors.toList());
             }
-            case Long -> {
-                return selectionStrings.stream().map(Long::parseLong).toList();
+            case Long: {
+                return selectionStrings.stream().map(Long::parseLong).collect(Collectors.toList());
             }
-            case Char -> {
-                return selectionStrings.stream().map(e -> e.charAt(0)).toList();
+            case Char: {
+                return selectionStrings.stream().map(e -> e.charAt(0)).collect(Collectors.toList());
             }
-            case Byte -> {
-                return selectionStrings.stream().map(Byte::parseByte).toList();
+            case Byte: {
+                return selectionStrings.stream().map(Byte::parseByte).collect(Collectors.toList());
             }
-            case Bool -> {
-                return selectionStrings.stream().map(Boolean::parseBoolean).toList();
+            case Bool: {
+                return selectionStrings.stream().map(Boolean::parseBoolean).collect(Collectors.toList());
             }
-            case Double -> {
-                return selectionStrings.stream().map(Double::parseDouble).toList();
+            case Double: {
+                return selectionStrings.stream().map(Double::parseDouble).collect(Collectors.toList());
             }
-            case Float -> {
-                return selectionStrings.stream().map(Float::parseFloat).toList();
+            case Float: {
+                return selectionStrings.stream().map(Float::parseFloat).collect(Collectors.toList());
             }
-            default -> {
+            default: {
                 return null;
             }
         }
